<resources>
    <string name="app_name">Accroo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_required">Login required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="enter_current_login_password">Enter your current login password</string>
    <string name="enter_current_data_password">Enter your current data password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_login_password">Incorrect login password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_too_short">Password must be at least 10 characters</string>
    <string name="password_too_long">Password can\'t exceed 4096 characters</string>
    <string name="password_mismatch">Your passwords don\'t match</string>
    <string name="enter_email">Enter email address</string>
    <string name="email_mismatch">Email addresses don\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_key_decryption">KeyDecryptionActivity</string>
    <string name="agree_terms_privacy">By creating an account, you are agreeing to our\n<a href="https://www.google.com"><b>terms and conditions</b></a> and <a href="https://www.google.com"><b>privacy policy</b></a></string>
    <string name="important">Important!</string>
    <string name="data_password_description">Your data password is used to encrypt information that
        you enter into the app, such as transactions and categories. It is strongly recommended that you choose a
        data password that is different to your login password, though please note that unlike your login password,
        it is not possible to reset your data password if you forget it because it is never
        transmitted from your device.</string>
    <string name="password_warning">This password cannot be reset or recovered if you forget it.</string>
    <string name="reset_password_link">You will receive a link to reset your password.</string>
    <string name="send_link">SEND LINK</string>
    <string name="reset_link_sent">Password reset link sent</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>
    <string name="title_activity_edit_category">Edit Category</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="title_activity_select_icon">Select Icon</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="title_activity_category_overview">CategoryOverviewActivity</string>
    <string name="title_activity_select_category">Select Category</string>
    <string name="title_activity_select_subcategory">Select Sub Category</string>
    <string name="title_activity_select_general_category">Select General Category</string>
    <string name="title_activity_change_email">Change Email</string>
    <string name="title_activity_change_login_password">Change Login Password</string>
    <string name="title_activity_change_data_password">Change Data Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="activity_overview">Activity Overview</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings</string>
    <string name="category_name">Category name</string>
    <string name="general_category">General category</string>
    <string name="summary">Summary</string>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="sub_category">Sub category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="description">Description (optional)</string>
    <string name="timeout_error">The connection timed out</string>
    <string name="connection_error">Couldn\'t connect to server</string>
    <string name="general_error">An error occurred</string>
    <string name="invalid_input">Invalid input provided</string>
    <string name="email_in_use">This email address is already being used</string>
    <string name="no_category">This category does not exist</string>
    <string name="no_transaction">This transaction does not exist</string>
    <string name="invalid_date_range">Invalid date range</string>
    <string name="select_general_category">Select a general category</string>
    <string name="category_exists">Category already exists</string>
    <string name="transaction_added">Transaction added</string>
    <string name="transaction_updated">Transaction updated</string>
    <string name="transaction_deleted">Transaction deleted</string>
    <string name="category_added">Category added</string>
    <string name="category_updated">Category updated</string>
    <string name="category_deleted">Category deleted</string>
    <string name="submit">SUBMIT</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="continue_on">Continue</string>
    <string name="ok">Ok</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="update">UPDATE</string>
    <string name="username">Username</string>
    <string name="login_password">Login password</string>
    <string name="data_password">Data password</string>
    <string name="confirm_data_password">Confirm data password</string>
    <string name="unlock">UNLOCK</string>
    <string name="settings">Settings</string>
    <string name="change_email">Change email</string>
    <string name="change_login_password">Change login password</string>
    <string name="change_data_password">Change data password</string>
    <string name="sign_out">Sign out</string>
    <string name="about">About</string>
    <string name="new_email">New email</string>
    <string name="confirm_new_email">Confirm new email</string>
    <string name="confirm_login_password">Confirm login password</string>
    <string name="current_login_password">Current login password</string>
    <string name="new_login_password">New login password</string>
    <string name="confirm_new_login_password">Confirm new login password</string>
    <string name="current_data_password">Current data password</string>
    <string name="new_data_password">New data password</string>
    <string name="confirm_new_data_password">Confirm new data password</string>
    <string name="submitting">Submitting...</string>
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="signing_out">Signing out...</string>
    <string name="email_updated">Email address updated</string>
    <string name="login_password_updated">Login password updated</string>
    <string name="data_password_updated">Data password updated</string>
    <string name="incorrect_data_password">Incorrect data password</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_transaction">Delete this transaction?</string>
    <string name="delete_general_category">Delete this general category and any associated sub categories and transactions?</string>
    <string name="delete_sub_category">Delete this sub category and any associated transactions?</string>
    <string name="negative_amount">The transaction amount must be positive</string>
    <string name="enter_amount">Enter an amount</string>
    <string name="select_sub_category">Select a sub category</string>
    <string name="general_category_already_exists">General category already exists</string>
    <string name="enter_category_name">Enter a category name</string>
    <string name="select_category_icon">Select a category icon</string>
    <string name="no_transactions">No transactions</string>
    <string name="no_categories">No categories</string>
    <string name="no_sub_categories">No sub categories</string>
    <string name="no_connection">NO CONNECTION</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="email_chooser">Contact via</string>
    <string name="no_email_client">No email app available</string>
</resources>