<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paleskyline.accroo.activities.ChangeDataPasswordActivity">

    <EditText
        android:id="@+id/current_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:maxLength="80"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/current_data_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_data_password"
        android:inputType="textPassword"
        android:maxLength="80"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/current_login_password"/>

    <EditText
        android:id="@+id/new_data_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_data_password"
        android:inputType="textPassword"
        android:maxLength="80"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_data_password"/>

    <EditText
        android:id="@+id/confirm_data_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_data_password"
        android:inputType="textPassword"
        android:maxLength="80"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/new_data_password" />

    <Button
        android:id="@+id/update_data_password_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/update"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/confirm_data_password" />

</android.support.constraint.ConstraintLayout>
