<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paleskyline.navicash.fragments.GeneralCategoryFragment">

    <EditText
        android:id="@+id/general_category_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:textSize="16sp"
        android:layout_marginStart="23dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toRightOf="@+id/select_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/select_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/i0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/root_category_type"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/general_category_name_field">

        <RadioButton
            android:id="@+id/income_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/expense_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense"
            android:textSize="16sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/submit_general_category_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
