<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paleskyline.accroo.activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_link"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="254"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_text" />

    <Button
        android:id="@+id/send_link"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:text="@string/send_link"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/reset_email" />

</android.support.constraint.ConstraintLayout>
