<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.paleskyline.navicash.activities.RegisterStageOneActivity">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/registration_input"-->
        <!--android:paddingTop="20dp"-->
        <!--android:paddingBottom="50dp"-->
        <!--android:orientation="vertical">-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:hint="Email address"/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/loginPassword"-->
            <!--android:inputType="textPassword"-->
            <!--android:hint="Login password"/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/loginPasswordConfirm"-->
            <!--android:inputType="textPassword"-->
            <!--android:hint="Confirm login password"/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/dataPassword"-->
            <!--android:inputType="textPassword"-->
            <!--android:hint="Data password"/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/dataPasswordConfirm"-->
            <!--android:inputType="textPassword"-->
            <!--android:hint="Confirm data password"/>-->

    <!--</LinearLayout>-->

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/registration_input"-->
        <!--android:text="REGISTER"-->
        <!--android:id="@+id/register_button" />-->

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/confirm_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/login_password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_email" />

    <EditText
        android:id="@+id/confirm_login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_login_password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
